non-array stack setup. stack and queue tests

--- a/oop/object_prototype_practice/object_prototype_practice/test/index.html
+++ b/oop/object_prototype_practice/object_prototype_practice/test/index.html
@@ -24,12 +24,16 @@
     <!-- source files -->
     <script type="text/javascript" src="../src/SinglyLinkedList.js"></script>
     <script type="text/javascript" src="../src/DoublyLinkedList.js"></script>
+    <script type="text/javascript" src="../src/Stack.js"></script>
+    <script type="text/javascript" src="../src/Queue.js"></script>
 
 
     <!-- spec files -->
     <script type="text/javascript" src="verifyClass.js"></script>
     <script type="text/javascript" src="SinglyLinkedList.js"></script>
     <script type="text/javascript" src="DoublyLinkedList.js"></script>
+    <script type="text/javascript" src="Stack.js"></script>
+    <script type="text/javascript" src="Queue.js"></script>
 
 
     <script>
