--- a/oop/object_prototype_practice/object_prototype_practice/test/index.html
+++ b/oop/object_prototype_practice/object_prototype_practice/test/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="../src/DoublyLinkedList.js"></script>
     <script type="text/javascript" src="../src/Stack.js"></script>
     <script type="text/javascript" src="../src/Queue.js"></script>
+    <script type="text/javascript" src="../src/BinHeap.js"></script>
 
 
     <!-- spec files -->
@@ -34,6 +35,7 @@
     <script type="text/javascript" src="DoublyLinkedList.js"></script>
     <script type="text/javascript" src="Stack.js"></script>
     <script type="text/javascript" src="Queue.js"></script>
+    <script type="text/javascript" src="BinHeap.js"></script>
 
 
     <script>
