--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -5,7 +5,7 @@
 
     <title>Mocha Tests</title>
     <link rel="stylesheet" href="bower_components/mocha/mocha.css">
-
+    <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
   </head>
   <body>
     <div id="mocha"></div>
@@ -22,20 +22,28 @@
     <script>window.expect = chai.expect</script>
 
     <!-- source files -->
+    <!--
     <script type="text/javascript" src="src/SinglyLinkedList.js"></script>
     <script type="text/javascript" src="src/DoublyLinkedList.js"></script>
     <script type="text/javascript" src="src/Stack.js"></script>
     <script type="text/javascript" src="src/Queue.js"></script>
     <script type="text/javascript" src="src/BinHeap.js"></script>
+    -->
+    <script type="text/javascript" src="src/TreeNode.js"></script>
+    <script type="text/javascript" src="src/ArrayQs.js"></script>
 
 
     <!-- spec files -->
     <script type="text/javascript" src="test/verifyClass.js"></script>
+    <script type="text/javascript" src="test/TreeNode.js"></script>
+    <script type="text/javascript" src="test/ArrayQs.js"></script>
+    <!--
     <script type="text/javascript" src="test/SinglyLinkedList.js"></script>
     <script type="text/javascript" src="test/DoublyLinkedList.js"></script>
     <script type="text/javascript" src="test/Stack.js"></script>
     <script type="text/javascript" src="test/Queue.js"></script>
     <script type="text/javascript" src="test/BinHeap.js"></script>
+    -->
 
 
     <script>
