--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -31,12 +31,14 @@
     -->
     <script type="text/javascript" src="src/TreeNode.js"></script>
     <script type="text/javascript" src="src/ArrayQs.js"></script>
+    <script type="text/javascript" src="src/Trie.js"></script>
 
 
     <!-- spec files -->
     <script type="text/javascript" src="test/verifyClass.js"></script>
     <script type="text/javascript" src="test/TreeNode.js"></script>
     <script type="text/javascript" src="test/ArrayQs.js"></script>
+    <script type="text/javascript" src="test/Trie.js"></script>
     <!--
     <script type="text/javascript" src="test/SinglyLinkedList.js"></script>
     <script type="text/javascript" src="test/DoublyLinkedList.js"></script>
