--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="src/TreeNode.js"></script>
     <script type="text/javascript" src="src/ArrayQs.js"></script>
     <script type="text/javascript" src="src/Trie.js"></script>
+    <script type="text/javascript" src="src/BinSrchTree.js"></script>
 
 
     <!-- spec files -->
@@ -39,6 +40,7 @@
     <script type="text/javascript" src="test/TreeNode.js"></script>
     <script type="text/javascript" src="test/ArrayQs.js"></script>
     <script type="text/javascript" src="test/Trie.js"></script>
+    <script type="text/javascript" src="test/BinSrchTree.js"></script>
     <!--
     <script type="text/javascript" src="test/SinglyLinkedList.js"></script>
     <script type="text/javascript" src="test/DoublyLinkedList.js"></script>
