bin max heap with basic bst and dst

--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="src/ArrayQs.js"></script>
     <script type="text/javascript" src="src/Trie.js"></script>
     <script type="text/javascript" src="src/BinSrchTree.js"></script>
+    <script type="text/javascript" src="src/BinHeap2019.js"></script>
 
 
     <!-- spec files -->
@@ -41,6 +42,7 @@
     <script type="text/javascript" src="test/ArrayQs.js"></script>
     <script type="text/javascript" src="test/Trie.js"></script>
     <script type="text/javascript" src="test/BinSrchTree.js"></script>
+    <script type="text/javascript" src="test/BinHeap2019.js"></script>
     <!--
     <script type="text/javascript" src="test/SinglyLinkedList.js"></script>
     <script type="text/javascript" src="test/DoublyLinkedList.js"></script>
