--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' ws://localhost:*">-->
+
     <title>Mocha Tests</title>
     <link rel="stylesheet" href="bower_components/mocha/mocha.css">
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
@@ -13,14 +15,8 @@
     <script src="bower_components/chai/chai.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script>
-      mocha.setup({
-        'ui': 'bdd',
-        'bail': true
-      });
-    </script>
-    <script>window.expect = chai.expect</script>
 
+    <script type="text/javascript" src="test/_setupTest.js"></script>
     <!-- source files -->
     <!--
     <script type="text/javascript" src="src/SinglyLinkedList.js"></script>
@@ -52,13 +48,7 @@
     <script type="text/javascript" src="test/Queue.js"></script>
     <script type="text/javascript" src="test/BinHeap.js"></script>
     -->
+    <script type="text/javascript" src="test/_runTest.js"></script>
 
-
-    <script>
-
-      $(function() {
-        window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
-      });
-    </script>
   </body>
 </html>
