--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="src/BinSrchTree.js"></script>
     <script type="text/javascript" src="src/BinHeap2019.js"></script>
     <script type="text/javascript" src="src/SortingAlgos.js"></script>
-
+    <script type="text/javascript" src="src/PixelArray.js"></script>
 
     <!-- spec files -->
     <script type="text/javascript" src="test/verifyClass.js"></script>
