looping single link list

--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="src/BinHeap2019.js"></script>
     <script type="text/javascript" src="src/SortingAlgos.js"></script>
     <script type="text/javascript" src="src/PixelArray.js"></script>
-
+    <script type="text/javascript" src="src/SinglyLinkedList.js"></script>
     <!-- spec files -->
     <script type="text/javascript" src="test/verifyClass.js"></script>
     <script type="text/javascript" src="test/TreeNode.js"></script>
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="test/BinSrchTree.js"></script>
     <script type="text/javascript" src="test/BinHeap2019.js"></script>
     <script type="text/javascript" src="test/SortingAlgos.js"></script>
+    <script type="text/javascript" src="test/SinglyLinkedList.js"></script>
     <!--
     <script type="text/javascript" src="test/SinglyLinkedList.js"></script>
     <script type="text/javascript" src="test/DoublyLinkedList.js"></script>
