rename to competingmaxes problem

--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="src/Trie.js"></script>
     <script type="text/javascript" src="src/BinSrchTree.js"></script>
     <script type="text/javascript" src="src/BinHeap2019.js"></script>
+    <script type="text/javascript" src="src/CompetingMaxes.js"></script>
     <script type="text/javascript" src="src/SortingAlgos.js"></script>
     <script type="text/javascript" src="src/PixelArray.js"></script>
     <script type="text/javascript" src="src/SinglyLinkedList.js"></script>
