--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="test/Trie.js"></script>
     <script type="text/javascript" src="test/BinSrchTree.js"></script>
     <script type="text/javascript" src="test/BinHeap2019.js"></script>
+    <script type="text/javascript" src="test/CompetingMaxes.js"></script>
     <script type="text/javascript" src="test/SortingAlgos.js"></script>
     <script type="text/javascript" src="test/SinglyLinkedList.js"></script>
     <!--
