dp algos refactor

--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="src/BinSrchTree.js"></script>
     <script type="text/javascript" src="src/BinHeap2019.js"></script>
     <script type="text/javascript" src="src/CompetingMaxes.js"></script>
+    <script type="text/javascript" src="src/DynamicProgramming.js"></script>
     <script type="text/javascript" src="src/SortingAlgos.js"></script>
     <script type="text/javascript" src="src/PixelArray.js"></script>
     <script type="text/javascript" src="src/SinglyLinkedList.js"></script>
@@ -42,6 +43,7 @@
     <script type="text/javascript" src="test/BinSrchTree.js"></script>
     <script type="text/javascript" src="test/BinHeap2019.js"></script>
     <script type="text/javascript" src="test/CompetingMaxes.js"></script>
+    <script type="text/javascript" src="test/DynamicProgramming.js"></script>
     <script type="text/javascript" src="test/SortingAlgos.js"></script>
     <script type="text/javascript" src="test/SinglyLinkedList.js"></script>
     <!--
