commit algo practice from jan 2019

--- a/oop/object_prototype_practice/index.html
+++ b/oop/object_prototype_practice/index.html
@@ -44,6 +44,7 @@
     <script type="text/javascript" src="test/BinHeap2019.js"></script>
     <script type="text/javascript" src="test/CompetingMaxes.js"></script>
     <script type="text/javascript" src="test/DynamicProgramming.js"></script>
+    <script type="text/javascript" src="test/PixelArray.js"></script>
     <script type="text/javascript" src="test/SortingAlgos.js"></script>
     <script type="text/javascript" src="test/SinglyLinkedList.js"></script>
     <!--
